# shlomi-fish-homepage

./: .ci-gen.ini  .ci-github-actions.bash  .eslintrc.yml  .gen-ci.bash  .gitignore  .gitmodules  .hgignore  .kateconfig  .tidyallrc  .travis.bash  .travis.yml  CONTRIBUTING.docbook.xml  DONE  Howto.cook  INSTALL  INSTALL.docbook.xml  INSTALL.md  Install patented technology  LICENSE  LICENSE.asciidoc  LICENSE.md  Makefile  Meta sd k  README.asciidoc  README.md  TODO  TODO.quicktask  _Main.mak  bower.json  eslint-ts--more-strict.yml  eslint-ts.myconfig.js  find-wmls-t2.sh  find-wmls-vipe.sh  gen-helpers  gen-helpers.pl  gen_helpers.sh  package-lock.json  package.json  scripts.irssi.org?organization=oscarg933&organization=oscarg933  style.css  (+1 more)
.act-github/workflows/: use-github-actions.yml
.github/workflows/: docker-ci-run.yml  use-github-actions.yml
2009-restyling/: .hgtags  INSTALL  Makefile  TODO  deps.mak  gen-helpers.pl
2009-restyling/common/: print.css  style.css.ttml
2009-restyling/lib/: SFresume_base.wml  share-this.wml  smoked-wp-theme.css.ttml  utils.wml
2009-restyling/std/: logo.wml
2009-restyling/t2/: Kfar-Saba-Site-Email-Exchange.txt  SFresume.html.wml  catb-heb.html  humour.html.wml  links.html.wml  mandel.m  old-news.html.wml  rewrite.html  shlomif.il.eu.org-questions.html.wml  toggle.html.wml
Tests/: 00yaml.t  case-insense-file-collision.t  cleanup-asciidoctor-docbook5.py  content-MANIFEST-html.t  content-Vim-talk.t  content-We-the-Living-Dead.t  content-bk2hp-svg.t  content-breadcrumbs-trails.t  content-deprecated-domains.t  content-docbook5-has-sub-header.py  content-docbook5-toc.t  content-epubs.py  content-fortunes-hyperlinked-URLs.t  content-fortunes-show.cgi.t  content-fortunes-text.t  content-image-macros-image-widths.py  content-js-files.t  content-main.py  content-qp-lecture-P4N.t  content-rindolf.t  content-root-page-has-hosting-link.py  content-stories-has-logo-img-tag.py  content-w2l-network-talk.t  content.t  docbooks-list-unit.t  duplicate_ids.py  fortunes-show-cgi.py  give-up-pyramid-script--unit.t  gmake-unit.t  meta-tag.t  nav-arrow-links.t  nav-blocks-local-links-integrity.t  nav-blocks.t  perl-critic.t  preincs-whitespace.t  regress-diff.t  removed-dice-average-unit.py  sorted-lines.t  spell-check--hebrew.t  spell-check-is-sorted--hebrew.t  (+12 more)
Tests/data/: fict1.xml  love-life-policy.docbook5.xml
Tests/js/: jqtree-from-h-w-json-nav-menu-test.js  qunit.css  test-suite.html
Tests/lib/: NavBlocks.pm  html_unit_test.py
Tests/wire-tests/: fortunes.t
codex-of-fantastecha/: a.out  mshuffle.c
common/: 404.html.wml  jqtree.css  print.css  style-2008.css.ttml  style.css  style.css.ttml
common/images/: container-top-extended-1024.xcf  container-top-extended-1200.xcf  domtab.js  faux-extended-1200.xcf  twitter-bird-light-bgs.eps
common/js/: jquery.treeview.min.js  main_nav_menu.js  moz-lang.js  my-expander.js  print-preview.js  print-ver.js  selfl-old.js  selfl.js  sub_menu.js  to-jqtree-2.js  to-jqtree.js  toggle_sect.js  toggler.js  (+1 more)
fantas/: a.out
lib/: MyEssaysNavData.pm  MyLecturesNavData.pm  MyNavData.pm  MyNavLinks.pm  MySectNavData.pm  NavDataRender.pm  NavSectMenuRender.pm  SFresume_base.tt2  SFresume_base.wml  SFresume_most_recent_sort.tt2  SFresume_most_recent_sort.wml  VimIface.pm  add-this.wml  amazon.wml  blocks.tt2  camila_ron.wml  common-style.css.ttml  common_art.tt2  common_art.wml  cpan_dists.wml  dbook.wml  div2mag.wml  driver.wml  emma_watson.wml  factoids-refactoring.pl  factoids-refactoring.vim  footer.wml  fortunes.css.ttml  fortunes_show.css.ttml  h_sections_local.tt2  jqui_tabs.wml  jqui_tabs_multi_lang.wml  judaism_and_israel.wml  lang_switch.css.ttml  lang_switch.tt2  lang_switch.wml  local-defs.wml  mathjax.wml  multi-lang.tt2  multi-lang.wml  (+23 more)
lib/presentations/qp/Autotools/src/changequote/: configure.in
lib/presentations/qp/Autotools/src/common_macros/AC_ARG_ENABLE/: configure.in
lib/presentations/qp/Autotools/src/simple_project/: Makefile.am  Makefile.am.html.wml  configure.in  configure.in.html.wml  index.html.wml
old/: adrian-ettlinger.html.wml  perl-critic.t  print.css  resume.old.html  rewrite.html  section-border.css  uri-bruck.html
proto/: noIE.xcf
rng/: catalog.xml
src/: 404.html.tt2  Kfar-Saba-Site-Email-Exchange.txt  SFresume.html.tt2  SFresume_detailed.html.tt2  edo.bmp.bz2  humour-heb.html.tt2  humour.html.tt2  index.xhtml.tt2  links.html.tt2  mandel.m  old-news.html.tt2  personal-heb.html.tt2  personal.html.tt2  shlomif.il.eu.org-questions.html.tt2  toggle.html.tt2  wonderous.html.tt2  wysiwyt.html.tt2
std/: hello  logo.wml
t2/: .bash_history  404.html.wml  Kfar-Saba-Site-Email-Exchange.txt  Letter_1.doc  SFresume.html  SFresume.html.wml  SFresume.html~  SFresume_base.wml  SFresume_detailed.html.wml  catb-heb.html  catb-heb.xhtml  fetchweb.sh  foo.html  gpling_bk.html  hello.html  hello.txt~  humour-heb.html.wml  humour.html  humour.html.wml  humour.html~  index.html.wml  index.html~  index.xhtml.wml  lecture.html  links.html  links.html.wml  mandel.m  old-news.html  old-news.html.wml  personal-heb.html.wml  personal.html  personal.html.wml  shlomif.il.eu.org-questions.html.wml  support.html  tame.html  things.html  toggle.html  toggle.html.wml  uri-bruck.txt~  wonderous.html  (+5 more)
t2/lecture/CMake/cmake_examples/advanced/: CMakeLists.txt
t2/lecture/CMake/cmake_examples/basic/: CMakeLists.txt  app.c  common.c  run  tmp.files
t2/lecture/CMake/cmake_examples/basic/sub/: CMakeLists.txt
t2/lecture/CMake/examples/all_in_one/: CMakeLists.txt  common.h  run  tmp.files
t2/lecture/CMake/examples/app/: CMakeCache.txt  CMakeLists.txt  Makefile
t2/lecture/CMake/examples/test/: CMakeLists.txt  hello.c
vipe/: CHURCH.txt.bz2  Fire_and_motion_heb.htm  bk_suitability.html  five-worlds-heb.html  gpling_bk.html  help_flags.html  index.html  index.html.wml  intro_to_rindolf.html  ip-noise-bt.txt  israeli-oss.html  lin_comp.doc  lin_comp.htm  perl-expert-quit-2.txt  project_spec.html  remove_cr.pl  style.css  things.html  timetable.html  timetable.html~  ui_design-2-heb.html  vipe.html
(+4925 files in other folders)
